# c_cpp_programming

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  GETTING_STARTED.md  LICENSE  README.md  ROADMAP.md
algorithms/: README.md
best-practices/: README.md
data-structures/: README.md
data-structures/beginner/: CMakeLists.txt  README.md  array_operations.c  searching.c  sorting.c
docs/deep-dives/: memory-layout-explained.md
embedded-systems/: README.md
embedded-systems/beginner/: CMakeLists.txt  bit_manipulation.c  memory_mapped_io.c  volatile_keyword.c
exercises/: README.md
exercises/beginner/: CMakeLists.txt  README.md  ex01_calculator.c  ex02_temperature.c  ex03_prime_checker.c  ex04_factorial.c  ex05_fibonacci.c  ex06_array_max_min.c  ex07_reverse_array.c  ex08_vowel_counter.c  ex09_sum_digits.c  ex10_multiplication_table.c
fundamentals/: README.md
fundamentals/beginner/: CMakeLists.txt  arrays.c  arrays.md  control-flow.md  control_flow.c  functions.c  functions.md  hello-world.md  hello_world.c  input-output.md  input_output.c  loops.c  loops.md  operators.c  operators.md  strings.c  strings.md  variables-and-data-types.md  variables_and_data_types.c
memory-management/: README.md
memory-management/beginner/: CMakeLists.txt  stack_vs_heap.c
projects/: README.md
resources/cheatsheets/: README.md
resources/common-pitfalls/: README.md
resources/debugging-guides/: README.md
resources/external-links/: README.md
resources/tooling-setup/: README.md
