cmake_minimum_required(VERSION 3.15)

# Beginner fundamentals examples
add_executable(hello_world hello_world.c)
add_executable(variables_and_data_types variables_and_data_types.c)
add_executable(operators operators.c)
add_executable(input_output input_output.c)
add_executable(control_flow control_flow.c)
add_executable(loops loops.c)
add_executable(functions functions.c)
add_executable(arrays arrays.c)
add_executable(strings strings.c)
